hydro2/hydro2-operator-derive/tests/trybuild/07_input_out_of_order.stderr
error: Encountered invalid syntax in `#[operator(...)]` attribute.
  --> tests/trybuild/07_input_out_of_order.rs:7:1
   |
7  | / #[operator(
8  | |     execute="out_of_order",
9  | |     opcode="OpCode::TestOp",
10 | |     input0="i32",
11 | |     input2="i64" // skipping input1 → should fail
12 | | )]
   | |__^

warning: unused imports: `OpCode` and `Operator`
 --> tests/trybuild/07_input_out_of_order.rs:4:21
  |
4 | use hydro2_operator::{OpCode, NetResult, Operator};
  |                     ^^^^^^             ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
